IPK/Übung08/Nr2/compiling_error.txt
In file included from /home/justin/C++/IPK/Übung08/Nr2/statisticsdriver.cc:10:0:
/home/justin/C++/IPK/Übung08/Nr2/statistics.hh: In instantiation of ‘double median(const T&) [with T = std::__cxx11::list<float>]’:
/home/justin/C++/IPK/Übung08/Nr2/statisticsdriver.cc:17:36:   required from ‘void print_statistics(const T&) [with T = std::__cxx11::list<float>]’
/home/justin/C++/IPK/Übung08/Nr2/statisticsdriver.cc:35:30:   required from here
/home/justin/C++/IPK/Übung08/Nr2/statistics.hh:29:23: error: no match for ‘operator[]’ (operand types are ‘std::__cxx11::list<float>’ and ‘std::__cxx11::list<float>::size_type {aka long unsigned int}’)
       return 0.5 * (v2[v.size()/2 - 1] + v2[v.size()/2]);
                     ~~^
/home/justin/C++/IPK/Übung08/Nr2/statistics.hh:29:44: error: no match for ‘operator[]’ (operand types are ‘std::__cxx11::list<float>’ and ‘std::__cxx11::list<float>::size_type {aka long unsigned int}’)
       return 0.5 * (v2[v.size()/2 - 1] + v2[v.size()/2]);
                                          ~~^
/home/justin/C++/IPK/Übung08/Nr2/statistics.hh:33:16: error: no match for ‘operator[]’ (operand types are ‘std::__cxx11::list<float>’ and ‘std::__cxx11::list<float>::size_type {aka long unsigned int}’)
       return v2[(v.size()+1)/2 - 1];
              ~~^
In file included from /usr/include/c++/7/algorithm:62:0,
                 from /home/justin/C++/IPK/Übung08/Nr2/statisticsdriver.cc:5:
/usr/include/c++/7/bits/stl_algo.h: In instantiation of ‘void std::__sort(_RandomAccessIterator, _RandomAccessIterator, _Compare) [with _RandomAccessIterator = std::_List_iterator<float>; _Compare = __gnu_cxx::__ops::_Iter_less_iter]’:
/usr/include/c++/7/bits/stl_algo.h:4836:18:   required from ‘void std::sort(_RAIter, _RAIter) [with _RAIter = std::_List_iterator<float>]’
/home/justin/C++/IPK/Übung08/Nr2/statistics.hh:25:12:   required from ‘double median(const T&) [with T = std::__cxx11::list<float>]’
/home/justin/C++/IPK/Übung08/Nr2/statisticsdriver.cc:17:36:   required from ‘void print_statistics(const T&) [with T = std::__cxx11::list<float>]’
/home/justin/C++/IPK/Übung08/Nr2/statisticsdriver.cc:35:30:   required from here
/usr/include/c++/7/bits/stl_algo.h:1969:22: error: no match for ‘operator-’ (operand types are ‘std::_List_iterator<float>’ and ‘std::_List_iterator<float>’)
     std::__lg(__last - __first) * 2,
               ~~~~~~~^~~~~~~~~
In file included from /usr/include/c++/7/bits/stl_algobase.h:67:0,
                 from /usr/include/c++/7/bits/char_traits.h:39,
                 from /usr/include/c++/7/ios:40,
                 from /usr/include/c++/7/ostream:38,
                 from /usr/include/c++/7/iostream:39,
                 from /home/justin/C++/IPK/Übung08/Nr2/statisticsdriver.cc:1:
/usr/include/c++/7/bits/stl_iterator.h:389:5: note: candidate: template<class _IteratorL, class _IteratorR> decltype ((__y.base() - __x.base())) std::operator-(const std::reverse_iterator<_Iterator>&, const std::reverse_iterator<_IteratorR>&)
     operator-(const reverse_iterator<_IteratorL>& __x,
     ^~~~~~~~
/usr/include/c++/7/bits/stl_iterator.h:389:5: note:   template argument deduction/substitution failed:
In file included from /usr/include/c++/7/algorithm:62:0,
                 from /home/justin/C++/IPK/Übung08/Nr2/statisticsdriver.cc:5:
/usr/include/c++/7/bits/stl_algo.h:1969:22: note:   ‘std::_List_iterator<float>’ is not derived from ‘const std::reverse_iterator<_Iterator>’
     std::__lg(__last - __first) * 2,
               ~~~~~~~^~~~~~~~~
In file included from /usr/include/c++/7/bits/stl_algobase.h:67:0,
                 from /usr/include/c++/7/bits/char_traits.h:39,
                 from /usr/include/c++/7/ios:40,
                 from /usr/include/c++/7/ostream:38,
                 from /usr/include/c++/7/iostream:39,
                 from /home/justin/C++/IPK/Übung08/Nr2/statisticsdriver.cc:1:
/usr/include/c++/7/bits/stl_iterator.h:1191:5: note: candidate: template<class _IteratorL, class _IteratorR> decltype ((__x.base() - __y.base())) std::operator-(const std::move_iterator<_IteratorL>&, const std::move_iterator<_IteratorR>&)
     operator-(const move_iterator<_IteratorL>& __x,
     ^~~~~~~~
/usr/include/c++/7/bits/stl_iterator.h:1191:5: note:   template argument deduction/substitution failed:
In file included from /usr/include/c++/7/algorithm:62:0,
                 from /home/justin/C++/IPK/Übung08/Nr2/statisticsdriver.cc:5:
/usr/include/c++/7/bits/stl_algo.h:1969:22: note:   ‘std::_List_iterator<float>’ is not derived from ‘const std::move_iterator<_IteratorL>’
     std::__lg(__last - __first) * 2,
               ~~~~~~~^~~~~~~~~
In file included from /usr/include/c++/7/vector:65:0,
                 from /home/justin/C++/IPK/Übung08/Nr2/statisticsdriver.cc:4:
/usr/include/c++/7/bits/stl_bvector.h:208:3: note: candidate: std::ptrdiff_t std::operator-(const std::_Bit_iterator_base&, const std::_Bit_iterator_base&)
   operator-(const _Bit_iterator_base& __x, const _Bit_iterator_base& __y)
   ^~~~~~~~
/usr/include/c++/7/bits/stl_bvector.h:208:3: note:   no known conversion for argument 1 from ‘std::_List_iterator<float>’ to ‘const std::_Bit_iterator_base&’
